# puzzle-hunt-tester

./: .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  RESUMO.md  THREADS.md  exemplos.sh  generate_test_puzzles.sh  test_full_32bit.sh  test_wordlist_puzzles.sh  teste.sh
src/: lib.rs
test_puzzles/: README_TESTES.md  random_32bit_puzzles.txt  wordlist_puzzles.txt
