[package]
name = "puzzle-entropy-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
# Paralelização
rayon = "1.8"

# Criptografia
sha2 = "0.10"
hex = "0.4"

# Progress bar e UI
indicatif = { version = "0.17", features = ["rayon"] }

# Serialização para ler puzzles
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilitários
anyhow = "1.0"
parking_lot = "0.12"

[[bin]]
name = "bruteforce"
path = "src/bin/bruteforce_numeric.rs"

